--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -2,10 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+ @layer components {
+  
+.btn{
+  @apply px-4 py-2 rounded-lg font-medium inline-flex items-center justify-center;
 }
 
+.btn-primary {
+  @apply bg-black text-white
+}
+
+.logo-ticker-image {
+   @apply h-40 w-auto;
+}
+.mask-gradient {
+  mask-image: linear-gradient(to right, transparent, black, transparent);
+}
+
+.bg-hero-gradient {
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.9),  
+    rgba(0, 0, 0, 0.6), 
+    rgba(31, 198, 109, 0.272), 
+    rgba(76, 175, 80, 0.2), 
+    rgba(0, 0, 0, 0.6), 
+    rgba(0, 0, 0, 0.9) 
+  );
+}
+
+
+}
 
 
